# ZLMediaKit

./: .gitignore  CMakeLists.txt  PLUGIN_README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  ZLMVersion.h  cmake_install.cmake
_codeql_build_dir/3rdpart/: Makefile  cmake_install.cmake
_codeql_build_dir/api/: Makefile  cmake_install.cmake
_codeql_build_dir/api/tests/: Makefile  cmake_install.cmake
_codeql_build_dir/ext-codec/: Makefile  cmake_install.cmake
_codeql_build_dir/server/: Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/srt/: Makefile  cmake_install.cmake
_codeql_build_dir/tests/: Makefile  cmake_install.cmake
example_plugin/: CMakeLists.txt  example_plugin.cpp
server/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.h  main.cpp
